--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -119,6 +119,8 @@
             {% endunless %}
           </form>
 
+          <button class="btn double-button" onclick="theme.doubleCart()">Double all items already in the cart for the craic!</button>
+
           <div class="product-description rte" itemprop="description">
             {{ product.description }}
           </div>
