--- a/templates/product.plus.liquid
+++ b/templates/product.plus.liquid
@@ -93,7 +93,7 @@
           </div>
 
           <!-- If the setting to allow uncool people to buy gloves is selected we don't run the validateReason function -->
-          <form name="ruairisForm" action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm" {% unless settings.allow_uncool_people_to_buy_gloves %}onsubmit="return validateReason()"{% endunless %}>
+          <form name="ruairisForm" action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm" {% unless settings.allow_uncool_people_to_buy_gloves %}onsubmit="return theme.validateReason()"{% endunless %}>
             <select name="id" id="productSelect" class="product-single__variants">
               {% for variant in product.variants %}
                 {% if variant.available %}
@@ -112,13 +112,13 @@
               <label for="Quantity">{{ 'products.product.quantity' | t }}</label>
               <input type="number" id="Quantity" name="quantity" value="1" min="1" class="quantity-selector">
             </div>
-            
+
             <p class="line-item-property__field why-sell">
               <label id="why-label" for="why-should-i-sell-you-this">Why should I sell you these gloves?</label>
               <label class="small-and-italic">Will be embroidered on your gloves for ever and ever.</label>
-              <input required data-error="Give me a reason or I'm not going to sell to you." class="required" id="why-should-i-sell-you-this" type="text" name="properties[Why should I sell you these gloves?]">
+              <input required class="required" id="why-should-i-sell-you-this" type="text" name="properties[Why should I sell you these gloves?]">
             </p>
-            
+
             <p class="line-item-property__field">
               <label for="upload-optional-glove-music-file">Upload optional glove music file</label>
               <label class="small-and-italic">All of our gloves play music, if you want your own music to play add a file here! If you don't 'The Glove Song' by Glovey Gloverson will play.</label>
@@ -130,9 +130,10 @@
               <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
             </button>
             {% endunless %}
-          
-            <button class="btn" onclick="doubleCart()">Double all items already in the cart for the craic!</button>
+
           </form>
+
+          <button class="btn double-button" onclick="theme.doubleCart()">Double all items already in the cart for the craic!</button>
 
           <div class="product-description rte" itemprop="description">
             {{ product.description }}
@@ -157,56 +158,6 @@
 
 {{ 'option_selection.js' | shopify_asset_url | script_tag }}
 <script>
-  
-  Shopify.queue = [];
-  
-  function doubleCart() {
-    var currentCart = jQuery.getJSON('/cart.js', function(cart) {
-      jQuery.each(cart.items, function(index, cartItem) {
-        Shopify.queue.push( { 
-          id: cartItem.variant_id,
-          quantity: cartItem.quantity,
-          properties: cartItem.properties
-        });
-      });
-      if (Shopify.queue.length) {
-        Shopify.addQueuedUpItemsToCart();
-      }
-	});
-  }
-  
-  Shopify.addQueuedUpItemsToCart = function() {
-    if (Shopify.queue.length) {
-      var item = Shopify.queue.pop();
-      $.ajax({
-        url: '/cart/add',
-        dataType: 'json',
-        type: 'post',
-        data: item,
-        success: Shopify.addQueuedUpItemsToCart,
-        error: Shopify.addQueuedUpItemsToCart
-      });
-    }
-    else {
-      alert("Doubled the items in the cart :\)");
-    }
-  };
-  
-  function validateReason() {
-    var reason = document.forms["ruairisForm"]["properties[Why should I sell you these gloves?]"].value;
-    if (reason != "I'm cool") {
-      alert("I don't think you're not cool enough, try entering \"I\'m cool\" as the reason for me to sell you these gloves.");
-      
-      // A few jQuery changes.
-      $(".why-sell").addClass('error-background');
-      
-      // I could do this easier, but just want to use a few different jQuery functions like find.
-      $(".why-sell").find("#why-label").addClass("error-text-colour");
-      
-      return false;
-    }
-  }
-  
   var selectCallback = function(variant, selector) {
     timber.productPage({
       money_format: "{{ shop.money_format }}",
